feat(main); fixed the div with the off-canvas and trhe breadcrump

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,11 @@ header nav div a img:first-child {
 main {
     height: calc(100vh - 80px);
 }
+
+main > div:first-child {
+    background-image: url("../img/sidebar-bg.png");
+    background-repeat: no-repeat;
+    background-position: cover;
+}
+
+/* FINIRE LA BREACRUP DIVE C'è ILPIU */
