feat(main): working on the div about the F.A.Q

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,9 @@ main > div:first-child {
 .breadcrumb-item {
     color: white;
 }
+
+/* FIRST TABLE'S CLASSES */
+
+.avatar {
+    max-width: 30px;
+}
