--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ main > div:first-child {
     background-position: cover;
 }
 
+.breadcrumb-item+.breadcrumb-item::before {
+    color: white;
+}
+
 /* SIDE-BAR'S CLASSES */
 
 .link_white:hover {
@@ -41,6 +45,3 @@ main > div:first-child {
 .avatar {
     max-width: 30px;
 }
-
-
-/* LAVORARE L'OFFCANVAS */
