--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ main > div:first-child {
 /* MEDIA QUEERIES */
 
 @media screen and (min-width: 992px) {
-    .offcanvas {
-        width: 400px;
+    .offcanvas.offcanvas-end {
+        width: 50%;
     }
 }
