fix(main): put the important to the media queery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,6 @@ main > div:first-child {
 
 @media screen and (min-width: 992px) {
     .offcanvas.offcanvas-end {
-        width: 50%;
+        width: 50% !important;
     }
 }
